fix flaky test by returning 409
